# bloom_filter

./: .gitignore  Cargo.toml  README.md
src/: filter.rs  main.rs  sample_output.txt  test.txt  test_input.txt
