[package]
name = "bloom_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# opt-level = 3
overflow-checks = false
# lto = true


[dependencies]
bitvec = "1.0.0"
hex = "0.4.3"
openssl = "0.10.38"
